# ai-powered-note-taker

./: README.md
backend/: .env  README.md  main.py  pyproject.toml
backend/components/: audio_recorder.py  audio_transcriber.py  extraction.py  processing.py
backend/prompt_eng/: prompt_manager.py  prompts.json
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: page.js  styles.css
